--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,8 @@
 {
-	"id": "ec280171-c67b-4cf8-923f-dc27fea91ee1",
-	"authors": ["CubeCoders Limited", "AMP Community"],
-	"origin": "https://github.com/CubeCoders/AMPTemplates.git",
-	"url": "https://github.com/CubeCoders/AMPTemplates",
-	"imagefile": "",
-	"prefix": "",
-	"repotype": "AppTemplates"
+    "id": "54706655-fb48-4fa3-a45f-fdff0b16a72a",
+    "authors": ["Angels - Made with AMP Config Generator"],
+    "origin": "https://github.com/Angels-dev - Made with AMP Config Generator/AMPTemplates.git",
+    "url": "https://github.com/Angels-dev - Made with AMP Config Generator/AMPTemplates",
+    "imagefile": "",
+    "prefix": "Angels - Made with AMP Config Generator"
 }
