--- a/trackmania-stadiumconfig.json
+++ b/trackmania-stadiumconfig.json
@@ -8,7 +8,7 @@
         "InputType": "text",
         "IsFlagArgument": false,
         "ParamFieldName": "DedicatedConfigFile",
-        "IncludeInCommandLine": true,
+        "IncludeInCommandLine": false,
         "DefaultValue": "dedicated_cfg.txt",
         "Placeholder": "dedicated_cfg.txt",
         "Suffix": "",
@@ -25,7 +25,7 @@
         "InputType": "text",
         "IsFlagArgument": false,
         "ParamFieldName": "MatchSettingsFile",
-        "IncludeInCommandLine": true,
+        "IncludeInCommandLine": false,
         "DefaultValue": "matchsettings.txt",
         "Placeholder": "matchsettings.txt",
         "Suffix": "",
