--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "id": "54706655-fb48-4fa3-a45f-fdff0b16a72a",
     "authors": ["Angels - Made with AMP Config Generator"],
-    "origin": "https://github.com/Angels-dev - Made with AMP Config Generator/AMPTemplates.git",
-    "url": "https://github.com/Angels-dev - Made with AMP Config Generator/AMPTemplates",
+    "origin": "https://github.com/Angels-dev/AMPTemplates.git",
+    "url": "https://github.com/Angels-dev/AMPTemplates",
     "imagefile": "",
-    "prefix": "Angels - Made with AMP Config Generator"
+    "prefix": "Angels"
 }
