--- a/trackmania-stadiumconfig.json
+++ b/trackmania-stadiumconfig.json
@@ -4,11 +4,11 @@
         "Category": "Server Settings",
         "Description": "Use a configuration file including all the options wanted",
         "Keywords": "config,file",
-        "FieldName": "DedicatedConfigFile",
+        "FieldName": "dedicated_cfg",
         "InputType": "text",
         "IsFlagArgument": false,
-        "ParamFieldName": "DedicatedConfigFile",
-        "IncludeInCommandLine": false,
+        "ParamFieldName": "dedicated_cfg",
+        "IncludeInCommandLine": true,
         "DefaultValue": "dedicated_cfg.txt",
         "Placeholder": "dedicated_cfg.txt",
         "Suffix": "",
@@ -21,13 +21,13 @@
         "Category": "Server Settings",
         "Description": "A file including the options such as the gamemode, time limit...",
         "Keywords": "match,file",
-        "FieldName": "MatchSettingsFile",
+        "FieldName": "game_settings",
         "InputType": "text",
         "IsFlagArgument": false,
-        "ParamFieldName": "MatchSettingsFile",
-        "IncludeInCommandLine": false,
-        "DefaultValue": "matchsettings.txt",
-        "Placeholder": "matchsettings.txt",
+        "ParamFieldName": "game_settings",
+        "IncludeInCommandLine": true,
+        "DefaultValue": "MatchSettings/matchsettings.txt",
+        "Placeholder": "MatchSettings/matchsettings.txt",
         "Suffix": "",
         "Hidden": false,
         "SkipIfEmpty": true,
